[package]
name = "relay-datagen-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5" }
relay-substrate-client = { path = "../client-substrate" }
relay-utils = { path = "../utils" }

# Supported Chains
bp-datagen = { path = "../../primitives/chain-datagen" }
datagen-runtime = { package="millau-runtime", git = "https://github.com/Datagen-Project/Datagen-Substrate-Grant.git", branch = "ln-fix-ci", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

[features]
default = [ "std" ]
std = [
	"bp-datagen/std",
	"datagen-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment/std",
	"sp-runtime/std",
]
