[package]
name = "parachains-relay"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
async-std = "1.6.5"
async-trait = "0.1.74"
futures = "0.3.29"
log = "0.4.20"
relay-utils = { path = "../utils" }

# Bridge dependencies

bp-polkadot-core = { path = "../../primitives/polkadot-core" }
relay-substrate-client = { path = "../client-substrate" }
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["max-encoded-len"] }

[dev-dependencies]
relay-substrate-client = { path = "../client-substrate", features = ["test-helpers"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.4.0" }
